Add beta opus framer

--- a/include/upipe-framers/Makefile.am
+++ b/include/upipe-framers/Makefile.am
@@ -4,6 +4,7 @@ myinclude_HEADERS = \
 	upipe_mpgv_framer.h \
 	upipe_mpga_framer.h \
 	upipe_a52_framer.h \
+	upipe_opus_framer.h \
 	upipe_telx_framer.h \
 	upipe_dvbsub_framer.h \
 	uref_mpgv.h \
