Install header correctly

--- a/include/upipe/Makefile.am
+++ b/include/upipe/Makefile.am
@@ -60,6 +60,7 @@ pkginclude_HEADERS = \
 	uprobe_prefix.h \
 	uprobe_select_flows.h \
 	uprobe_stdio.h \
+	uprobe_syslog.h \
 	uprobe_transfer.h \
 	uprobe_ubuf_mem.h \
 	uprobe_ubuf_mem_pool.h \
