Add base of zvbi encoder

--- a/include/Makefile.am
+++ b/include/Makefile.am
@@ -1,1 +1,1 @@
-SUBDIRS = upipe upipe-modules upipe-pthread upipe-framers upump-ev upump-ecore upipe-av upipe-ts upipe-swscale upipe-gl upipe-filters upipe-x264 upipe-osx upipe-alsa upipe-swresample upipe-blackmagic upipe-qt upipe-nacl upipe-amt upipe-v210
+SUBDIRS = upipe upipe-modules upipe-pthread upipe-framers upump-ev upump-ecore upipe-av upipe-ts upipe-swscale upipe-gl upipe-filters upipe-x264 upipe-osx upipe-alsa upipe-swresample upipe-blackmagic upipe-qt upipe-nacl upipe-amt upipe-v210 upipe-zvbi
