--- a/include/upipe-modules/Makefile.am
+++ b/include/upipe-modules/Makefile.am
@@ -45,4 +45,5 @@ myinclude_HEADERS = \
 	upipe_blank_source.h \
 	upipe_sine_wave_source.h \
 	upipe_stream_switcher.h \
-	upipe_dump.h
+	upipe_dump.h \
+	upipe_audio_merge.h
