--- a/lib/upipe-framers/Makefile.am
+++ b/lib/upipe-framers/Makefile.am
@@ -12,7 +12,8 @@ libupipe_framers_la_SOURCES = \
 	upipe_mpga_framer.c \
 	upipe_telx_framer.c \
 	upipe_dvbsub_framer.c \
-	upipe_video_trim.c
+	upipe_video_trim.c \
+	upipe_s302_framer.c
 libupipe_framers_la_CPPFLAGS = -I$(top_builddir)/include -I$(top_srcdir)/include
 libupipe_framers_la_CFLAGS = -Wall
 libupipe_framers_la_LDFLAGS = -no-undefined
