--- a/include/upipe-dveo/Makefile.am
+++ b/include/upipe-dveo/Makefile.am
@@ -1,3 +1,4 @@
 myincludedir = $(includedir)/upipe-dveo
 myinclude_HEADERS = \
-	upipe_dveo_asi_source.h
+	upipe_dveo_asi_source.h \
+	upipe_dveo_asi_sink.h
