--- a/lib/upipe-framers/Makefile.am
+++ b/lib/upipe-framers/Makefile.am
@@ -15,6 +15,7 @@ libupipe_framers_la_SOURCES = \
 	upipe_telx_framer.c \
 	upipe_dvbsub_framer.c \
 	upipe_s302_framer.c \
+	upipe_s337_framer.c \
 	upipe_video_trim.c
 
 libupipe_framers_la_CPPFLAGS = -I$(top_builddir)/include -I$(top_srcdir)/include
