--- a/include/upipe-framers/Makefile.am
+++ b/include/upipe-framers/Makefile.am
@@ -9,6 +9,7 @@ myinclude_HEADERS = \
 	upipe_telx_framer.h \
 	upipe_dvbsub_framer.h \
 	upipe_s302_framer.h \
+	upipe_s337_framer.h \
 	upipe_video_trim.h \
 	uref_mpgv.h \
 	uref_h264.h \
