--- a/lib/upipe-ts/Makefile.am
+++ b/lib/upipe-ts/Makefile.am
@@ -26,6 +26,7 @@ libupipe_ts_la_SOURCES = \
 	upipe_ts_demux.c \
 	upipe_ts_tstd.c \
 	upipe_ts_encaps.c \
+	upipe_ts_getpcr.c \
 	upipe_ts_pcr_interpolator.c \
 	upipe_ts_pes_encaps.c \
 	upipe_ts_psi_generator.c \
