initial rtp-vc2 pack commit

--- a/lib/upipe-modules/Makefile.am
+++ b/lib/upipe-modules/Makefile.am
@@ -91,6 +91,7 @@ libupipe_modules_la_SOURCES += \
 	upipe_rtcp.c \
 	upipe_rtp_reorder.c \
 	upipe_s337_encaps.c \
+	upipe_rtp_vc2_pack.c \
 	$(NULL)
 endif
 
